# bevy_ecs_dynamic

./: Cargo.toml  Makefile  README.md
design_docs/: architecture.md  demo_grammar.md  disjunct_tick_filters.md  internals_redesign.md  query_iter.md  validation.md
examples/query_interpreter/: Cargo.toml  README.md
examples/query_interpreter/src/: bevy_simple_text_input.rs  eval_parser.rs  interpret.rs  main.rs  query_parser.rs  spawn_scene.rs
src/: archematch.rs  ctor_dsl.rs  debug_unchecked.rs  dynamic_query.rs  fetches.rs  filters.rs  iter.rs  jagged_array.rs  lib.rs  maybe_item.rs  state.rs  tests.rs
src/builder/: methods.rs  mod.rs  named.rs  traits.rs
src/tests/: dy_cmp.rs  mod.rs  pretty_print.rs
