[package]
name = "query_interpreter"
description = "A live querying facility"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
bevy = "0.11.2"
winnow = "0.5.15"
bevy_mod_dynamic_query = { path = "../.." }
ron = "0.8.1"
# bevy_simple_text_input = "0.1.2"

[package.metadata.release]
release = false
